Add Campaign and Disposition UI

--- a/src/Modules/CrestApps.OrchardCore.Omnichannel/Views/Campaigns/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel/Views/Campaigns/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using OrchardCore.DisplayManagement
 
-@model ListCatalogEntryViewModel<CatalogEntryViewModel<OmnichannelDisposition>>
+@model ListCatalogEntryViewModel<CatalogEntryViewModel<OmnichannelCampaign>>
 
 <zone Name="Title"><h1>@RenderTitleSegments(T["Campaigns"])</h1></zone>
 
