--- a/src/Modules/CrestApps.OrchardCore.Omnichannel/Views/OmnichannelCampaignFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel/Views/OmnichannelCampaignFields.Edit.cshtml
@@ -19,3 +19,27 @@
         <span asp-validation-for="Descriptions" class="text-danger"></span>
     </div>
 </div>
+
+<div class="@Orchard.GetWrapperClasses()">
+    <label class="@Orchard.GetLabelClasses()">@T["Dispositions"]</label>
+    <div class="@Orchard.GetEndClasses()">
+        @{
+            var name = Html.NameFor(x => x.Dispositions);
+
+        }
+        @foreach (var disposition in Model.Dispositions ?? [])
+        {
+            <div class="form-check">
+                <input type="checkbox"
+                       class="form-check-input"
+                       name="@name"
+                       id="disposition_@disposition.Value"
+                       value="@disposition.Value"
+                       @(disposition.Selected ? "checked" : "") />
+                <label class="form-check-label" for="disposition_@disposition.Value">
+                    @disposition.Text
+                </label>
+            </div>
+        }
+    </div>
+</div>
