--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIDataSource.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIDataSource.SummaryAdmin.cshtml
@@ -23,7 +23,7 @@
             }
         </div>
     </div>
-    <div class="col-lg-auto col-12 d-flex justify-content-end">
+    <div class="col-lg-auto col-12 d-flex justify-content-end align-items-center">
         <div class="actions">
             @if (Model.Actions != null)
             {
