--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityBatch.Fields.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityBatch.Fields.SummaryAdmin.cshtml
@@ -1,6 +1,6 @@
 @using CrestApps.OrchardCore.Omnichannel.Core.Models
-@using OrchardCore.DisplayManagement.Views
+@using Microsoft.AspNetCore.Mvc.Localization
 
 @model ShapeViewModel<OmnichannelActivityBatch>
 
-<h5>@(Model.Value.DisplayText)</h5>
+<h5>@Model.Value.DisplayText</h5>
