--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/OmnichannelActivityContainer.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/OmnichannelActivityContainer.Edit.cshtml
@@ -1,28 +1,1 @@
-@using CrestApps.OrchardCore.Omnichannel.Core.Models
-@using OrchardCore.ContentManagement.Display
-@using OrchardCore.DisplayManagement.ModelBinding
-
-@inject IContentItemDisplayManager ContentItemDisplayManager
-@inject IDisplayManager<OmnichannelActivity> ActivityDisplayDriver
-@inject IUpdateModelAccessor UpdateModelAccessor
-@model OmnichannelActivityContainer
-
-@{
-    var contactShape = await ContentItemDisplayManager.UpdateEditorAsync(Model.Contact, UpdateModelAccessor.ModelUpdater, isNew: false);
-
-    var subjectShape = await ContentItemDisplayManager.UpdateEditorAsync(Model.Subject, UpdateModelAccessor.ModelUpdater, isNew: false);
-
-    var activityShape = await ActivityDisplayDriver.UpdateEditorAsync(Model.Activity, UpdateModelAccessor.ModelUpdater, isNew: false, "Process");
-}
-
-<div class="activity-card">
-    @await DisplayAsync(contactShape)
-</div>
-
-<div class="activity-card">
-    @await DisplayAsync(subjectShape)
-</div>
-
-<div class="activity-card">
-    @await DisplayAsync(activityShape)
-</div>
+@await DisplayAsync(Model.Content)
