Add activites header, list and create actions

--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerCompletedActivity.Fields.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerCompletedActivity.Fields.SummaryAdmin.cshtml
@@ -11,7 +11,7 @@
     </a>
 </h5>
 
-@if (!string.IsNullOrEmpty(Model.Value.Activity.Instructions))
+@if (!string.IsNullOrEmpty(Model.Value.Activity.Notes))
 {
-    <small class="text-muted">@Model.Value.Activity.Instructions</small>
+    <small class="text-muted">@Model.Value.Activity.Notes</small>
 }
