--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerCompletedActivity.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerCompletedActivity.Buttons.SummaryAdmin.cshtml
@@ -7,9 +7,9 @@
 
 @inject IAuthorizationService AuthorizationService
 
-@if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.ProcessActivity, Model.Value))
+@if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.EditActivity, Model.Value.Activity))
 {
-    <a asp-action="Process"
+    <a asp-action="Edit"
        asp-route-id="@Model.Value.Activity.Id"
-       class="btn btn-success btn-sm">@T["Process"]</a>
+       class="btn btn-primary btn-sm">@T["Edit"]</a>
 }
