--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Activities/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Activities/Edit.cshtml
@@ -1,6 +1,6 @@
 @using CrestApps.OrchardCore.Omnichannel.Managements.ViewModels
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["Process Activity"])</h1>
+    <h1>@RenderTitleSegments(T["Edit Activity"])</h1>
 </zone>
 
 @{
@@ -19,9 +19,26 @@
 
 <form method="post" asp-route-id="@activityId" enctype="multipart/form-data" class="no-multisubmit">
     @Html.ValidationSummary()
-    @await DisplayAsync(Model)
 
-    <button class="btn btn-primary" type="submit">@T["Process"]</button>
+    <div class="card mb-3">
+        <div class="card-header">
+            @T["Subject"]
+        </div>
+        <div class="card-body">
+            @await DisplayAsync(Model.Subject)
+        </div>
+    </div>
+
+    <div class="card mb-3">
+        <div class="card-header">
+            @T["Activity"]
+        </div>
+        <div class="card-body">
+            @await DisplayAsync(Model.Activity)
+        </div>
+    </div>
+
+    <button class="btn btn-primary" type="submit">@T["Save"]</button>
 
     <a class="btn btn-secondary cancel" role="button" asp-route-action="List" asp-route-contentItemId="@Model.ContactContentItem.ContentItemId">@T["Cancel"]</a>
 </form>
