--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainer.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainer.Buttons.SummaryAdmin.cshtml
@@ -7,6 +7,11 @@
 
 @inject IAuthorizationService AuthorizationService
 
+@if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.ListContactActivities, Model.Value.Contact))
+{
+    <a class="btn btn-sm btn-secondary" asp-action="List" asp-controller="Activities" asp-route-contentItemId="@Model.Value.Contact.ContentItemId" asp-area="@OmnichannelConstants.Features.Managements">@T["List Activities"]</a>
+}
+
 @if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.ProcessActivity, Model.Value))
 {
     <a asp-action="Process"
