--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerCompletedActivity.Description.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerCompletedActivity.Description.SummaryAdmin.cshtml
@@ -5,8 +5,4 @@
 
 @model ShapeViewModel<OmnichannelActivityContainer>
 
-<h5 class="mb-0">
-    <a asp-action="Complete" asp-route-id="@Model.Value.Activity.ActivityId">
-        @(Model.Value.SubjectContentTypeDefinition?.DisplayName ?? T["Unknown Subject"].Value)
-    </a>
-</h5>
+<small class="text-muted">@Model.Value.Activity.Notes</small>
