--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Activities/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Activities/Edit.cshtml
@@ -17,7 +17,7 @@
 
 @await DisplayAsync(shape)
 
-<form method="post" asp-route-id="@activityId" enctype="multipart/form-data" class="no-multisubmit">
+<form method="post" asp-action="Edit" asp-route-id="@activityId" enctype="multipart/form-data" class="no-multisubmit">
     @Html.ValidationSummary()
 
     <div class="card mb-3">
