--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerScheduledActivity.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerScheduledActivity.Buttons.SummaryAdmin.cshtml
@@ -7,17 +7,17 @@
 
 @inject IAuthorizationService AuthorizationService
 
-@if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.ProcessActivity, Model.Value.Activity))
+@if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.CompleteActivity, Model.Value.Activity))
 {
-    <a asp-action="Process"
-       asp-route-id="@Model.Value.Activity.Id"
-       class="btn btn-success btn-sm">@T["Process"]</a>
+    <a asp-action="Complete"
+       asp-route-id="@Model.Value.Activity.ActivityId"
+       class="btn btn-success btn-sm">@T["Complete"]</a>
 }
 
 @if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.EditActivity, Model.Value.Activity))
 {
     <a asp-action="Edit"
-       asp-route-id="@Model.Value.Activity.Id"
+       asp-route-id="@Model.Value.Activity.ActivityId"
        class="btn btn-primary btn-sm">@T["Edit"]</a>
 }
 
