use the new YesSql.Core package and improve UI

--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityBatch.ActionsMenuItems.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityBatch.ActionsMenuItems.SummaryAdmin.cshtml
@@ -3,7 +3,7 @@
 @model ShapeViewModel<OmnichannelActivityBatch>
 
 <a asp-action="Load"
-   asp-route-id="@Model.Value.Id"
+   asp-route-id="@Model.Value.ItemId"
    class="text-danger dropdown-item"
    data-url-af="RemoveUrl UnsafeUrl"
    data-title="@T["Load Batch"]"
