--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerScheduledActivity.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerScheduledActivity.Buttons.SummaryAdmin.cshtml
@@ -10,14 +10,14 @@
 @if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.CompleteActivity, Model.Value.Activity))
 {
     <a asp-action="Complete"
-       asp-route-id="@Model.Value.Activity.ActivityId"
+       asp-route-id="@Model.Value.Activity.ItemId"
        class="btn btn-success btn-sm">@T["Complete"]</a>
 }
 
 @if (await AuthorizationService.AuthorizeAsync(User, OmnichannelConstants.Permissions.EditActivity, Model.Value.Activity))
 {
     <a asp-action="Edit"
-       asp-route-id="@Model.Value.Activity.ActivityId"
+       asp-route-id="@Model.Value.Activity.ItemId"
        class="btn btn-primary btn-sm">@T["Edit"]</a>
 }
 
