--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerScheduledActivity.Fields.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelActivityContainerScheduledActivity.Fields.SummaryAdmin.cshtml
@@ -6,7 +6,7 @@
 @model ShapeViewModel<OmnichannelActivityContainer>
 
 <h5 class="mb-0">
-    <a asp-action="Complete" asp-route-id="@Model.Value.Activity.ActivityId">
+    <a asp-action="Complete" asp-route-id="@Model.Value.Activity.ItemId">
         @(Model.Value.SubjectContentTypeDefinition?.DisplayName ?? T["Unknown Subject"].Value)
     </a>
 </h5>
