--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelChannelEndpoint.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelChannelEndpoint.Buttons.SummaryAdmin.cshtml
@@ -4,5 +4,5 @@
 @model ShapeViewModel<OmnichannelChannelEndpoint>
 
 <a asp-action="Edit"
-   asp-route-id="@Model.Value.Id"
+   asp-route-id="@Model.Value.ItemId"
    class="btn btn-primary btn-sm">@T["Edit"]</a>
