--- a/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelDisposition.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Omnichannel.Managements/Views/Items/OmnichannelDisposition.Buttons.SummaryAdmin.cshtml
@@ -4,10 +4,10 @@
 @model ShapeViewModel<OmnichannelDisposition>
 
 <a asp-action="Edit"
-   asp-route-id="@Model.Value.Id"
+   asp-route-id="@Model.Value.ItemId"
    class="btn btn-primary btn-sm">@T["Edit"]</a>
 
 <a asp-action="Delete"
-   asp-route-id="@Model.Value.Id"
+   asp-route-id="@Model.Value.ItemId"
    class="btn btn-danger btn-sm"
    data-url-af="RemoveUrl UnsafeUrl">@T["Delete"]</a>
