Add AICompletionWithConfigTask for workflows

--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionFromProfileTask.Fields.Design.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionFromProfileTask.Fields.Design.cshtml
@@ -2,7 +2,7 @@
 @using OrchardCore.Workflows.Helpers
 @using OrchardCore.Workflows.ViewModels
 
-@model ActivityViewModel<AICompletionTask>
+@model ActivityViewModel<AICompletionFromProfileTask>
 
 <header>
     <h4>
