--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionFromProfileTask.Fields.Thumbnail.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionFromProfileTask.Fields.Thumbnail.cshtml
@@ -1,7 +1,7 @@
 @using CrestApps.OrchardCore.AI.Workflows.Models
 @using OrchardCore.Workflows.ViewModels
 
-@model ActivityViewModel<AICompletionTask>
+@model ActivityViewModel<AICompletionFromProfileTask>
 
 <h4 class="card-title">
     <i class="fa-solid fa-pencil" aria-hidden="true"></i>
